# voxl-tfsrv-dev

./: .gitignore
libmodal-pipe/: CHANGELOG  build.sh
libmodal-pipe/pkg/control/: control
voxl-docker/: .gitignore  README.md  build-cross-docker.sh  install-offline-docker.sh  modalai-buckets.md
voxl-docker/files/: voxl-docker.sh
voxl-docker/offline-voxl-sdk/: offline-voxl-sdk.Dockerfile
voxl-docker/qrb5165-emulator/: README.md  qrb5165-emulator-build.sh
voxl-docker/voxl-cross/: fix_sysroot_symlinks.sh  generate_so_symlinks.sh  patch_sysroots.sh  voxl-cross-linter.sh  voxl-cross.Dockerfile
voxl-docker/voxl-cross/apt_sources/sources.list.d/: ubuntu.sources
voxl-docker/voxl-cross/bash_utilities/etc/: profile
voxl-docker/voxl-cross/bash_utilities/etc/profile.d/: local_completions.sh
voxl-docker/voxl-cross/cross_toolchain/: aarch64-gnu-7.toolchain.cmake  aarch64-gnu-9.toolchain.cmake  arm-gnueabi-4.9.toolchain.cmake  qcs6490_ubun_24.04_aarch64.toolchain.cmake  qrb5165_ubun1_18.04_aarch64.toolchain.cmake  qrb5165_ubun1_18.04_arm32.toolchain.cmake  qrb5165_ubun2_20.04_aarch64.toolchain.cmake  qrb5165_ubun2_20.04_arm32.toolchain.cmake
voxl-docker/voxl-cross/qrb5165_2_includes/hardware/: gr_priv_handle.h  gralloc.h
voxl-docker/voxl-cross/qrb5165_arm32_glibc_2.27/: notes.txt
voxl-tflite-server/: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  install_build_deps.sh  make_package.sh
voxl-tflite-server/bash_completions/: voxl-configure-tflite
voxl-tflite-server/include/: ai_detection.h  config_file.h  piml_output.h  piml_payload.h  voxl-configure-tflite.h  xor_output.h  xor_payload.h
voxl-tflite-server/include/model_helper/: model_helper.h  model_info.h  piml_model_helper.h  xor_model_helper.h  yolov8_model_helper.h
voxl-tflite-server/pkg/control/: control  postinst
voxl-tflite-server/scripts/: voxl-configure-tflite-wizard
voxl-tflite-server/services/: voxl-tflite-server.service
voxl-tflite-server/src/: CMakeLists.txt  config_file.cpp  inference_handler.cpp  main.cpp  utils.cpp  voxl-configure-tflite.c
voxl-tflite-server/src/model_helper/: generic_classification_model_helper.cpp  generic_object_detection_model_helper.cpp  model_helper.cpp  piml_model_helper.cpp  xor_model_helper.cpp  yolov5_model_helper.cpp  yolov8_model_helper.cpp
